# cy2path

./: README.md  pyproject.toml  setup.py
cy2path/: __init__.py  analytical.py  cytopath.py  dynamics.py  fate.py  pseudotime.py  sampling.py  selection.py  simulation.py  utils.py
cy2path/FHMM/: trainer.py
cy2path/_FHMM/: _IFHMM.py  _NFHMM.py  _SFHMM.py  __init__.py  trainer.py
cy2path/dynamics/: __init__.py  infer_dynamics.py  infer_joint_dynamics.py  infer_posthoc.py
cy2path/models/: _FHMM.py  _IFHMM.py  _LSSM.py  _NSSM.py  _SSM.py  _SSM_node.py  __init__.py  methods.py  trainer.py
cy2path/plotting/: __init__.py  plot_animation.py  plot_cluster_probabilities.py  plot_cytopath.py  plot_distances.py  plot_dynamics.py  plot_fate.py  plot_heatmap.py
switchstate/: __init__.py  cytopath.py  dynamics.py  fate.py  pseudotime.py  sampling.py  simulation.py  utils.py
switchstate/models/: IFHMM.py  ISS_IFHMM.py  SSM.py  SSM_node.py  _IFHMM.py  _SSM.py  _SSM_node.py  __init__.py  methods.py  trainer.py
switchstate/plotting/: __init__.py  plot_animation.py  plot_cluster_probabilities.py  plot_cytopath.py  plot_distances.py  plot_dynamics.py  plot_fate.py  plot_heatmap.py  plot_lineage.py
